<resources>
    <string name="app_name">Business Ideas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="feedback">Feedback</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="ready_to_register">Ready to Register</string>
    <string name="sign_in">Sign-IN</string>
    <string name="register">Register</string>
    <string name="detail_of_business">Detail of Business..</string>
    <string name="ranging_from_one_million_onward">Ranging From One Million-Onward</string>
    <string name="let_s_see_how_can_you_earn_ten_lakh_by_investing_50_60_thousands">Let\'s see How can you earn ten lakh by investing 50-60 thousands!</string>
    <string name="it_is_important_that_you_can_get_profit_of_10lakh_from_this_business_after_investing_50_60k">It is Important that you can get profit of 10lakh from this business after investing 50-60k</string>
    <string name="now_its_depends_on_your_marketing_that_how_fast_you_can_achieve_your_target">Now its depends on your marketing that how fast you can achieve your target</string>
    <string name="now_i_am_going_to_tell_you_that_how_can_you_earn_profit_of_minimum_8lakh_and_maximum_12lakh_by_investing_50_60k">Now I am Going to tell you that how can you earn profit of minimum 8lakh and maximum 12lakh by investing 50-60k</string>
    <string name="earning_period">Earning Period</string>
    <string name="you_can_earn_this_profit_in_15_days_or_in_6_months_n_its_all_depends_on_you_n_any_body_can_earn_this_profit_in_6_months_if_your_are_sharp_minded_so_you_can_earn_this_in_one_month">You can earn this profit in 15 days or in 6 months.\n Its all depends on you.\n Any body can earn this profit in 6 months. If your are sharp minded so you can earn this in one month.</string>
    <string name="price_of_multani_mitti">Price Of Multani Mitti</string>
    <string name="after_you_purchase_rs_50_kg_you_will_make_a_pack_of_rs_30_per_25grams_n_it_contains_the_expence_of_your_pack">After you purchase Rs.50/kg, You will make a pack of Rs.30 per 25grams.\n It contains the expence of your pack.</string>
    <string name="the_price_of_the_multani_mitti_is_rs_50_per_kg">The price of the Multani Mitti is Rs.50 per kg.</string>
    <string name="you_have_to_buy_a_grinder_machine_to_grind_it_which_you_can_purchase_from_market_in_rs_10_15k">You have to buy a grinder machine to grind it which you can purchase from market in Rs.10-15k.</string>
    <string name="you_have_to_make_40_packets_of_25grams_from_1kg_n_this_one_pack_will_sell_in_market_of_rs_30_n_so_you_can_earn_1200_from_1kg_of_clay">You have to make 40 packets of 25grams from 1Kg.\n This one pack will sell in market of Rs.30.\n So you can earn 1200 from 1Kg of clay.</string>
    <string name="the_cost_on_your_printed_pack_is_rs_2_3">The cost on your printed pack is Rs.2-3.</string>
    <string name="you_have_to_purchase_1000kg_which_costs_rs_50000_n_from_which_you_can_make_4000_packs">You have to purchase 1000Kg which costs Rs.50000.\n From which you can make 4000 packs.</string>
    <string name="these_4000_packets_will_sell_of_rs_30_per_pack_which_means_this_all_will_sell_of_rs_12lakh">These 4000 packets will sell of Rs.30/per pack. Which means this all will sell of Rs.12lakh.</string>
    <string name="your_bike_can_do_so_much_more_than_just_take_you_from_one_place_to_another_in_fact_instead_of_being_an_additional_expense_in_your_life_it_can_be_a_money_generating_machine">Your bike can do so much more than just take you from one place to another.\n In fact, instead of being an additional expense in your life, it can be a money generating machine.</string>
    <string name="whether_you_want_to_pay_off_your_bike_make_money_on_the_side_or_find_a_full_time_gig_then_keep_reading_we_re_covering_many_ways_your_bike_can_make_you_money">Whether you want to pay off your bike, make money on the side, or find a full time gig, then keep reading.\n We\'re covering many ways your bike can make you money.</string>
    <string name="when_you_re_not_using_your_bike_you_can_make_passive_income_by_renting_it_out_to_other_people_companies_like_uber_careem_and_food_panda_are_the_best_apps_to_do_this">When you\'re not using your bike you can make passive income by renting it out to other people!\n Companies like Uber, Careem and Food Panda are the best apps to do this.</string>
    <string name="airbnb_is_an_app_where_millions_of_people_are_making_money_renting_out_their_extra_bedroom_entire_house_or_unused_space_to_travellers_n_there_are_over_500_000_bookings_every_night_on_airbnb_in_over_190_countries_n_wherever_you_are_in_the_world_chances_are_you_can_start_making_money_as_an_airbnb_host_n_here_is_how_you_can_make_airbnb_an_income_stream_even_if_you_don_t_own_a_home">AirBnB is an app where millions of people are making money renting out their extra bedroom, entire house or unused space to travellers./n There are over 500,000 bookings every night on Airbnb in over 190 countries./n Wherever you are in the world, chances are you can start making money as an Airbnb Host./n Here is how you can make Airbnb an income stream, even if you don\'t own a home.</string>
    <string name="how_does_airbnb_work">How Does AirBnB Work?</string>
    <string name="all_you_need_to_start_making_money_is_a_spare_room_apartment_or_house_however_small_or_big_it_may_be_n_if_you_have_that_simply_sign_up_as_an_airbnb_host_and_create_your_listing">All you need to start making money is a spare room, apartment or house, however small or big it may be./n If you have that simply sign up as an Airbnb Host and create your listing.</string>
    <string name="if_you_don_t_have_an_extra_room_or_don_t_own_a_home_there_are_still_options">If you don’t have an extra room or don\'t own a home there are still options:</string>
    <string name="use_other_people_s_properties_and_start_an_airbnb_management_company_n_rent_out_your_place_while_you_are_travelling_not_at_home_n_you_can_convert_one_of_your_rooms_into_an_extra_bedroom_n_ask_your_landlord_for_permission_to_use_airbnb_give_them_some_profits_n_buy_a_property_to_use_for_airbnb_n_find_a_friend_who_has_a_room_s_and_make_a_deal_with_them">Use other people’s properties and start an Airbnb management company\n Rent out your place while you are travelling/not at home\n You can convert one of your rooms into an extra bedroom\n Ask your landlord for permission to use Airbnb (give them some profits)\n Buy a property to use for Airbnb\n Find a friend who has a room(s) and make a deal with them.</string>
    <string name="how_much_can_you_earn">How much can you earn?</string>
    <string name="some_people_can_cover_their_mortgage_payments_with_airbnb_others_are_running_a_full_time_business_with_multiple_properties_nthere_is_no_limit_to_how_much_you_can_earn_it_depends_how_serious_you_want_to_take_it_n_in_general_your_location_and_the_type_of_space_you_have_is_what_will_determine_your_income_na_luxury_condo_in_las_vegas_will_earn_more_than_a_1_bedroom_house_in_a_small_town_n_click_here_to_see_how_much_your_place_is_worth">Some people can cover their mortgage payments with Airbnb others are running a full time business with multiple properties.\nThere is no limit to how much you can earn, it depends how serious you want to take it.\n In general, your location and the type of space you have is what will determine your income.\nA luxury condo in Las Vegas will earn more than a 1 bedroom house in a small town.\n Click here to see how much your place is worth.</string>
    <string name="here_are_some_variables_that_will_determine_your_income">Here are some variables that will determine your income:</string>
    <string name="your_nightly_price_n_your_vacancy_rate_how_many_nights_will_you_be_booked_n_your_place_how_many_guests_you_can_accommodate_size_of_home_amenities_etc_n_your_location_is_there_tourism_heavy_business_area_a_travel_hotspot_a_large_city_n_time_of_year_season_n_competition_supply_demand_in_your_area_affects_the_price_n_automation_if_you_want_it_to_be_100_passive_there_will_be_more_expenses">Your nightly price\n Your vacancy rate - how many nights will you be booked\n Your place - How many guests you can accommodate, size of home, amenities etc.\n Your location - is there tourism, heavy business area, a travel hotspot, a large city?\n Time of year/season/n Competition - Supply/demand in your area affects the price\n Automation - if you want it to be 100% passive there will be more expenses</string>
    <string name="how_to_get_started">How to Get Started</string>
    <string name="if_you_re_interested_in_starting_your_own_airbnb_business_as_a_side_hustle_or_to_build_passive_income_we_actually_made_an_entire_app_on_this_topic_n_you_can_download_our_free_airbnb_guide_here_n">If you\'re interested in starting your own Airbnb business as a side hustle or to build passive income we actually made an entire app on this topic!/n You can download our free Airbnb guide here/n</string>
    <string name="if_you_want_a_quick_overview_here_is_the_basic_process_for_getting_your_first_booking">If you want a quick overview here is the basic process for getting your first booking:</string>
    <string name="get_a_room_or_house_you_can_list_on_airbnb_n_make_an_airbnb_account_you_can_sign_up_here_n_create_a_great_listing_airbnb_walks_you_through_the_process_n_start_receiving_bookings_set_your_calendar_price_and_let_the_money_start_coming_in_n_welcome_your_guest_prepare_the_property_and_wait_for_your_guests_to_arrive_n_get_paid_once_your_guests_finish_their_stay_you_automatically_get_paid_airbnb_keeps_3_n_set_up_systems_optional_set_things_up_like_self_check_in_cleaning_services_and_more_so_you_have_a_passive_income_stream_n_anyone_can_do_airbnb_without_prior_experience_but_there_are_a_lot_of_steps_involved_n_if_you_want_to_save_time_download_our_free_airbnb_guide_to_get_your_listing_up_in_a_few_hours">Get a room or house you can list on Airbnb\n Make an airbnb account - You can sign up here\n Create a great listing - Airbnb walks you through the process\n Start receiving bookings - Set your calendar, price and let the money start coming in\n Welcome your guest - Prepare the property and wait for your guests to arrive\n Get paid - Once your guests finish their stay you automatically get paid! Airbnb keeps 3%.\n Set up systems (optional) - Set things up like self-check in, cleaning services, and more so you have a passive income stream.\n Anyone can do Airbnb without prior experience. But there are a lot of steps involved.\n If you want to save time download our free Airbnb guide to get your listing up in a few hours!</string>
    <string name="find_out_how_much_your_unit_will_make">Find Out How Much Your Unit Will Make</string>
    <string name="millions_of_people_are_using_airbnb_nif_you_want_a_slice_of_the_pie_start_by_finding_out_how_much_you_can_earn_in_your_area_n_if_you_re_interested_in_starting_your_own_airbnb_business_as_a_side_hustle_or_to_build_passive_income_download_our_free_airbnb_guide_here_for_step_by_step_instructions">Millions of people are using Airbnb.\nIf you want a slice of the pie start by finding out how much you can earn in your area!\n If you\'re interested in starting your own Airbnb business as a side hustle or to build passive income download our free Airbnb guide here for step by step instructions</string>
</resources>