<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultaniMitti">

    <ImageView
        android:id="@+id/tenk1"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:background="@drawable/multani"
        android:scaleType="centerCrop" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tenk1"
        android:id="@+id/scrl"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_of_businessusess"
                android:layout_below="@+id/tenk1"
                android:textColor="@android:color/black"
                android:ems="10"
                android:background="@android:color/holo_green_light"
                android:id="@+id/dtl"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/rtarw"
                android:drawableStart="@drawable/rtarw" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_s_see_how_can_you_earn_ten_lakh_by_investing_50_60_thousands"
                android:layout_below="@id/dtl"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:id="@+id/dtl1"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_is_important_that_you_can_get_profit_of_10lakh_from_this_business_after_investing_50_60k"
                android:layout_below="@id/dtl1"
                android:layout_marginTop="10dp"
                android:id="@+id/dtl2"
                android:textColor="@android:color/black"
                android:layout_marginLeft="24dp"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_its_depends_on_your_marketing_that_how_fast_you_can_achieve_your_target"
                android:layout_below="@id/dtl2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:id="@+id/dtl3"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_i_am_going_to_tell_you_that_how_can_you_earn_profit_of_minimum_8lakh_and_maximum_12lakh_by_investing_50_60k"
                android:layout_below="@id/dtl3"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:id="@+id/dtl4"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="24dp"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earning_period"
                android:layout_below="@id/dtl4"
                android:ems="10"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/dtl5"
                android:textSize="30dp"
                android:background="@android:color/holo_green_light"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_can_earn_this_profit_in_15_days_or_in_6_months_n_its_all_depends_on_you_n_any_body_can_earn_this_profit_in_6_months_if_your_are_sharp_minded_so_you_can_earn_this_in_one_month"
                android:layout_below="@id/dtl5"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:id="@+id/dtl6"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="24dp"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_of_multani_mitti"
                android:layout_below="@id/dtl6"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:id="@+id/dtl7"
                android:textSize="30dp"
                android:textColor="@android:color/black"
                android:background="@android:color/holo_green_light"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_price_of_the_multani_mitti_is_rs_50_per_kg"
                android:layout_below="@id/dtl7"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:id="@+id/dtl8"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/after_you_purchase_rs_50_kg_you_will_make_a_pack_of_rs_30_per_25grams_n_it_contains_the_expence_of_your_pack"
                android:layout_below="@id/dtl8"
                android:layout_marginTop="10dp"
                android:id="@+id/dtl9"
                android:textSize="20dp"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_have_to_buy_a_grinder_machine_to_grind_it_which_you_can_purchase_from_market_in_rs_10_15k"
                android:layout_below="@id/dtl9"
                android:layout_marginTop="10dp"
                android:id="@+id/dtl10"
                android:layout_marginLeft="24dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_have_to_make_40_packets_of_25grams_from_1kg_n_this_one_pack_will_sell_in_market_of_rs_30_n_so_you_can_earn_1200_from_1kg_of_clay"
                android:layout_below="@id/dtl10"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:id="@+id/dtl11"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_cost_on_your_printed_pack_is_rs_2_3"
                android:layout_below="@id/dtl11"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:id="@+id/dtl12"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginStart="24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_have_to_purchase_1000kg_which_costs_rs_50000_n_from_which_you_can_make_4000_packs"
                android:layout_below="@id/dtl12"
                android:layout_marginTop="10dp"
                android:id="@+id/dtl13"
                android:layout_marginLeft="24dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/these_4000_packets_will_sell_of_rs_30_per_pack_which_means_this_all_will_sell_of_rs_12lakh"
                android:layout_below="@id/dtl13"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:id="@+id/dtl14"
                android:textColor="@android:color/black"
                android:layout_marginLeft="24dp"
                android:textSize="20sp"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>